--- a/RoomBookToExcel/RoomBookToExcelProgressBarWPF.xaml
+++ b/RoomBookToExcel/RoomBookToExcelProgressBarWPF.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:RoomBookToExcel"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="450" Title="Табличка формируется. Нужно немного подождать..." MaxHeight="100" MaxWidth="450"
-             MinHeight="100" MinWidth="450" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen"
+             MinHeight="100" MinWidth="450" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Icon="Resources/citrus.ico" WindowStartupLocation="CenterScreen"
              Topmost="True">
     <Grid>
         <ProgressBar Name="pb_RoomBookToExcelProgressBar" Margin="10" Value="0"/>
